fixed 4x4 alignment issue

--- a/react-app/src/components/Sauces/Saucelist.css
+++ b/react-app/src/components/Sauces/Saucelist.css
@@ -151,6 +151,7 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
   margin-top: 100px;
+  grid-gap: 100px;
   /* align-items: center;
   justify-content: center; */
 }
